# CRANTb-transmitters

./: .gitignore  01_split.py  02_train.py  README.md  config.yaml  getting_data.py  getting_data.sh  inference.sh  main.py  pixi.toml  pyproject.toml
notebooks/: getting_data.py
src/crantb/: data.py  inference.py  split.py  train.py  train.sh
